# work_db

./: .gitignore  README.md  main.py  pyproject.toml
src/: db_manager.py  parser_hh.py
